<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetails">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:src="@drawable/bookcover"
        android:alpha="0.2"
        android:scaleType="fitXY"
        android:translationZ="2dp"
        android:id="@+id/detailBackgroundBookImage"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:alpha="0.6"
        android:translationZ="12dp"
        app:cardBackgroundColor="@color/colorPrimary" />


    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:translationZ="20dp"
        android:alpha="1"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:id="@+id/detailBookImageCard"


        >
        <ImageView
            android:id="@+id/detailBookImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bookcover"
            android:alpha="1"
            android:scaleType="fitXY"

            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/detailBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailBookImageCard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-condensed"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/book_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:translationZ="20dp" />

    <TextView
        android:id="@+id/detailBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailBookTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif-condensed-light"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/author_name"
        android:textColor="@color/book_author"
        android:textSize="15sp"
        android:translationZ="20dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/black"
        android:translationZ="21dp"
        android:alpha="0.3"
        app:cardCornerRadius="15dp"
        android:layout_below="@+id/detailBookAuthor"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detailBackgroundBookImage"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
              />



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="05dp"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_description"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:id="@+id/detailBookDescription"/>

            </ScrollView>

            <Button
                android:id="@+id/detailStartReadingBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingVertical="10dp"
                android:text="Start Reading"

                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>